# ClubsBackend

./: Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py  events.py  users.py
app/core/: config.py  deps.py  exceptions.py
app/crud/: event.py  event_member.py  user.py
app/db/: session.py
app/db/models/: __init__.py  event.py  event_image.py  event_member.py  user.py
app/middlewares/: MaxAuthMiddleware.py
app/schemas/: event.py  event_image.py  event_member.py  user.py
app/services/: alarm.py  bot_file_service.py  bot_notification_service.py  bot_service.py  calendar_service.py  image_client.py  image_service.py  scheduler_service.py
bot/: keyboards.py  main.py  scheduler.py  services.py
bot/services/: bot_services.py
nginx/certs/: nginx.crt  nginx.key
nginx/conf/: default.conf
nginx/conf.d/: default.conf
