[project]
name = "clubsbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.0",
    "greenlet>=3.2.4",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "qrcode>=8.2",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
]
